fix: center other results header

--- a/find_pp2m/templates/find_pp2m/pp2m_distance.html
+++ b/find_pp2m/templates/find_pp2m/pp2m_distance.html
@@ -171,7 +171,9 @@
         </script>
 
         <!-- Other results -->
-        <p>D'autres villes s'offrent à vous :</p>
+        <div align="center">
+            <p >D'autres villes s'offrent à vous :</p>
+        </div>
         <div>
             <table id="OtherResults" class="resultsTable" style="max-width:600px" align="center"></table>
         </div>
